# deadmock

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  env.toml  rustfmt.toml
config/: jasonozias.com-proxy.toml
config/files/: header-pattern-match-response.json  method-pattern-match-response.json  weather-response.json
config/files/ecsb-test.kroger.com/mobilecheckout/api/v1/card/: default-mastercard-response.json  default-visa-response.json
config/mappings/: exact-match-url-header.toml  exact-match-url-json.toml  exact-match-url.toml  pattern-match-header.toml  pattern-match-method.toml  pattern-match-url.toml
config/mappings/ecsb-test.kroger.com/mobilecheckout/api/v1/card/: default-mastercard.toml  default-visa.toml  proxy.toml
config/mappings/ecsb-test.kroger.com/mobilecheckout/healthcheck/: proxy.toml
config/mappings/jasonozias.com/: proxy.toml
docker/dev/: Dockerfile
docker/prod/: Dockerfile
docker/stage/: Dockerfile
docker/test/: Dockerfile
examples/config/jasonozias/: jasonozias.com-proxy.toml
examples/mappings/: json.toml  plaintext.toml
examples/mappings/ecsb-test.kroger.com/mobilecheckout/: healthcheck-proxy.toml  healthcheck.toml
examples/mappings/ecsb-test.kroger.com/mobilecheckout/api/v1/: card-proxy.toml
examples/mappings/jasonozias/: jasonozias.com-proxy.toml
examples/mappings/jasonozias.com/: jasonozias.com-proxy.toml
scripts/: home.py  locustfile.py
src/: client.rs  config.rs  environment.rs  error.rs  handler.rs  header.rs  http.rs  main.rs  run.rs  util.rs
src/codec/: inbound.rs  mod.rs  outbound.rs
src/mapping/: mod.rs  request.rs  response.rs
src/matcher/: mod.rs  request.rs  response.rs
