[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
build = "build.rs"
description = "API Mocking and Virtualization"
documentation = "https://docs.rs/deadmock"
homepage = "https://github.com/rustyhorde/deadmock"
keywords = [
    "API",
    "mock",
    "virtualization",
]
license = "MIT/Apache-2.0"
name = "deadmock"
readme = "README.md"
repository = "https://github.com/rustyhorde/deadmock"
version = "0.1.0"

[dependencies]
bytes = "0"
clap = "2"
colored = "1"
error-chain = "0"
getset = "0"
http = "0"
httparse = "1"
rand = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog-async = "2"
slog-term = "2"
slog-try = "0"
tokio = "0"
tokio-codec = "0"
tokio-io = "0"
tomlenv = "0"

[dependencies.slog]
version = "2"
features = ["max_level_trace", "release_max_level_trace"]

[dependencies.chrono]
version = "0"
features = ["serde"]

[build-dependencies]
vergen = "2"
