[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
build = "build.rs"
description = "API Mocking and Virtualization"
documentation = "https://docs.rs/deadmock"
edition = "2018"
homepage = "https://github.com/rustyhorde/deadmock"
keywords = [
    "API",
    "mock",
    "virtualization",
]
license = "MIT/Apache-2.0"
name = "deadmock"
readme = "README.md"
repository = "https://github.com/rustyhorde/deadmock"
version = "0.1.0"

[dependencies]
bytes = "0"
cached = "0"
clap = "2"
colored = "1"
curl = "0"
dirs = "1"
failure = "0"
futures = "0.1"
http = "0"
httparse = "1"
hyper = "0"
hyper-proxy = "0"
hyper-tls = "0"
lazy_static = "1"
libdeadmock = "0"
rand = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog-async = "2"
slog-term = "2"
slog-try = "0"
tokio-async-await = "0"
tokio-codec = "0"
tokio-io = "0"
toml = "0"
tomlenv = "0"
typed-headers = "0"

[dependencies.slog]
version = "2"
features = ["max_level_trace", "release_max_level_trace"]

[dependencies.chrono]
version = "0"
features = ["serde"]

[dependencies.uuid]
version = "0"
features = ["v4", "u128", "serde"]

[build-dependencies]
vergen = "2"

[patch.crates-io]
hyper-proxy = { path = "../hyper-proxy" }
libdeadmock = { path = "../libdeadmock" }
futures-util-preview = { path = "../futures-rs/futures-util" }
