[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
build = "build.rs"
description = "API Mocking and Virtualization"
documentation = "https://docs.rs/deadmock"
edition = "2018"
homepage = "https://github.com/rustyhorde/deadmock"
keywords = [
    "API",
    "mock",
    "virtualization",
]
license = "MIT/Apache-2.0"
name = "deadmock"
readme = "README.md"
repository = "https://github.com/rustyhorde/deadmock"
version = "0.1.0"

[dependencies]
clap = "2"
colored = "1"
dirs = "1"
failure = "0"
libdeadmock = "0"
rand = "0"
slog-try = "0"
tomlenv = "0"

[dependencies.slog]
version = "2"
features = ["max_level_trace", "release_max_level_trace"]

[build-dependencies]
vergen = "3"

[patch.crates-io]
libdeadmock = { path = "../libdeadmock" }